// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message box component snapshot renders the message box from logged in user 1`] = `
<div
  className="my-message-wrapper--h93b8ATj"
>
  <div
    className="chat-message--QnC2_lx7"
  >
    <p>
      test content 123
    </p>
  </div>
</div>
`;

exports[`Message box component snapshot renders the message box from other users 1`] = `
<div
  className="chat-message-wrapper--hp6HY0Bp"
>
  <div
    className="chat-message--QnC2_lx7"
  >
    <span>
      testUser
      :
    </span>
    <p>
      test content 123
    </p>
  </div>
</div>
`;
